[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/popups/excuse_subpopup.gd" type="Script" id=1]
[ext_resource path="res://images/popups/excuse_drawing_bg.png" type="Texture" id=2]
[ext_resource path="res://images/popups/close_window.png" type="Texture" id=3]
[ext_resource path="res://images/popups/close_window_pressed.png" type="Texture" id=4]
[ext_resource path="res://images/excuse_pictures/bacon.png" type="Texture" id=5]
[ext_resource path="res://images/popups/share.png" type="Texture" id=6]
[ext_resource path="res://images/popups/share_pressed.png" type="Texture" id=7]
[ext_resource path="res://images/popups/left.png" type="Texture" id=8]
[ext_resource path="res://images/popups/left_pressed.png" type="Texture" id=9]
[ext_resource path="res://images/popups/left_blocked.png" type="Texture" id=10]
[ext_resource path="res://images/popups/right.png" type="Texture" id=11]
[ext_resource path="res://images/popups/right_pressed.png" type="Texture" id=12]
[ext_resource path="res://images/popups/right_blocked.png" type="Texture" id=13]

[node name="excuse_subpopup" type="Node2D"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="non_clickable_space" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -535.0
margin_top = -650.0
margin_right = 535.0
margin_bottom = 650.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="exit_button" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 377.0
margin_top = -711.0
margin_right = 527.0
margin_bottom = -524.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="excuse_image" type="Sprite" parent="." index="3"]

position = Vector2( 0, -102.556 )
texture = ExtResource( 5 )

[node name="share" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -82.0
margin_top = 398.0
margin_right = 83.0
margin_bottom = 562.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="left" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -247.0
margin_top = 408.0
margin_right = -104.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="right" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_top = 408.0
margin_right = 257.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]

[connection signal="pressed" from="share" to="." method="_on_share_pressed"]


